--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,14 +1,36 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+html,
+body,
+#root {
+  height: 100%;
+}
+
+.leaflet-marker-icon.leaflet-div-icon {
+  background: 0 !important;
+  border: 0 !important;
+}
+
+.annotation {
+  font-size: 16px;
+  font-weight: 600;
+  color: white;
+  width: 500px;
+  height: 20px;
+  position: absolute;
+  left: 10px;
+  bottom: 5px;
 }
